# otel_with_lttng

./: CMakeLists.txt  Dockerfile  README.md  run.sh
.devcontainer/: devcontainer.json
include/: lttng_span_exporter.h  lttng_span_exporter_lttng_tracepoint.h
src/: lttng_span_exporter.cpp  main.cpp
